# TickBiteRisk

./: .gitignore  CITATION.cff  README.md  code-of-conduct.md  contributing.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
api/: api-spec.md
docs/: architecture.md  data-manifest.md  data-sources.md  etl-pipeline.md  install-local.md  literature-review.md  model-background.md  model-spec.md  operational-runbook.md  public-product-boundary.md  regional-research-evidence.md  research-report-tools-assessment.md  roadmap.md  software-requirements-spec.md  testing-ci-plan.md  user-guide.md  vision-scope.md
public/: app.js  index.html  regional-research.html  regional-research.js  styles.css
review/: 2026-buildability-review.md  README.md
sql/: schema.sql
tests/: __init__.py  test_acquisition_provenance.py  test_acs_exposure.py  test_annual_forecast.py  test_build_outputs.py  test_building_permits.py  test_census_population.py  test_cli_acs_exposure.py  test_cli_annual_forecast.py  test_cli_building_permits.py  test_cli_contact_pressure.py  test_cli_county_adjacency.py  test_cli_dashboard_assets.py  test_cli_deer_harvest.py  test_cli_ecology.py  test_cli_enso.py  test_cli_enviroatlas.py  test_cli_forecast_bayesian_update_backtest.py  test_cli_forecast_calibration_backtest.py  test_cli_lyme.py  test_cli_lyme_aggregate.py  test_cli_maine_jmmc_tickborne.py  test_cli_mass_dph_syndromic_ed.py  test_cli_mast_acorn.py  test_cli_model_backtest.py  test_cli_model_comparison.py  test_cli_model_design_matrix.py  test_cli_model_diagnostics.py  test_cli_model_features.py  (+94 more)
(+181 files in other folders)
