[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickbiterisk"
version = "0.1.0"
description = "Maryland-first tickborne disease risk data warehouse and model toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
tickbiterisk = "tickbiterisk.cli:app"

[tool.setuptools.packages.find]
include = ["tickbiterisk*"]

[tool.setuptools.package-data]
tickbiterisk = ["resources/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
